New chromium headless mode.

--- a/tests/01-example/config.yml
+++ b/tests/01-example/config.yml
@@ -7,7 +7,7 @@ tasks:
   - name: chromium
     # profile: true
     duration: 10000
-    headless: false
+    headless: true
     nickname: testBot
     talk:
       delay: 1000
