--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
     "@types/got": "^9.6.12",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.10.3",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
@@ -39,8 +40,11 @@
   },
   "dependencies": {
     "commander": "^11.1.0",
+    "form-data": "^4.0.0",
     "got": "^11.8.6",
+    "md5": "^2.3.0",
     "puppeteer": "^21.6.0",
+    "sharp": "^0.33.0",
     "yaml": "^2.3.4"
   }
 }
