--- a/tests/01-example/config.yml
+++ b/tests/01-example/config.yml
@@ -9,6 +9,7 @@ tasks:
   # Or you can create a live stream for tests:
   - type: create_live
     user: user_01
+    name: create_live
 
   - type: wait
     name: wait_two_second
@@ -26,3 +27,12 @@ tasks:
     nickname: talkingBot
     talk:
       delay: 1000
+
+  # Let some time to tests...
+  - type: wait
+    name: waiting_for_tests
+    duration: 12000
+
+  - type: delete_current_live # this will delete the current live, only if it was created for the test!
+    name: delete_current_live
+    user: user_01 # must provide the user that has created the video
