--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/got": "^9.6.12",
     "@types/md5": "^2.3.5",
     "@types/node": "^20.10.3",
+    "@types/xmpp__component": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^7.32.0",
@@ -45,6 +46,7 @@
     "md5": "^2.3.0",
     "puppeteer": "^21.6.0",
     "sharp": "^0.33.0",
+    "xmppjs-chat-bot": "^0.2.8",
     "yaml": "^2.3.4"
   }
 }
