--- a/tests/10-browser-vs-flooding-bot/config.yml
+++ b/tests/10-browser-vs-flooding-bot/config.yml
@@ -40,6 +40,14 @@ tasks:
     talk:
       delay: 150
 
+  - type: external_component_bot
+    name: external_component_bot_3
+    duration: 250000
+    nickname: bot_03
+    external_component: external_03
+    talk:
+      delay: 1000
+
   # Let some time to tests...
   - type: wait
     name: waiting_for_tests
