--- a/tests/50-anonymous-carbons/config.yml
+++ b/tests/50-anonymous-carbons/config.yml
@@ -29,7 +29,7 @@ tasks:
       disco: true # get disco info
       roster: true # get roster
       vcards: false # get vcards
-      carbons: false # activate carbon
+      carbons: true # activate carbon
       mam: false # retrieve last messages
 
   - type: wait
